--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,12 @@ python = "^3.12"
 pandas = "^2.2.3"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+nfelib = "^2.1.1"
+lxml = "^5.3.0"
 
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
