--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 nfelib = "^2.1.1"
 lxml = "^5.3.0"
+xmltodict = "^0.14.2"
 
 
 [tool.poetry.group.dev.dependencies]
