--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python-dotenv = "^1.0.1"
 nfelib = "^2.1.1"
 lxml = "^5.3.0"
 xmltodict = "^0.14.2"
+briefer = "^0.0.14"
 
 
 [tool.poetry.group.dev.dependencies]
