--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ lxml = "^5.3.0"
 xmltodict = "^0.14.2"
 briefer = "^0.0.14"
 pyarrow = "^19.0.0"
+boto3 = "^1.40.3"
 
 
 [tool.poetry.group.dev.dependencies]
